@@ -17,27 +17,35 @@
 
 package org.wildfly.prospero.api;
 
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.MalformedURLException;
 import java.net.URI;
-import java.nio.file.Path;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import javax.xml.stream.XMLStreamException;
 
+import org.apache.commons.io.IOUtils;
 import org.eclipse.aether.repository.RemoteRepository;
-import org.eclipse.aether.repository.RepositoryPolicy;
 import org.jboss.galleon.ProvisioningException;
 import org.jboss.galleon.config.FeaturePackConfig;
 import org.jboss.galleon.config.ProvisioningConfig;
 import org.jboss.galleon.universe.FeaturePackLocation;
 import org.wildfly.channel.Channel;
 import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.ChannelMapper;
+import org.wildfly.channel.InvalidChannelException;
 import org.wildfly.channel.Repository;
+import org.wildfly.channel.maven.ChannelCoordinate;
+import org.wildfly.channel.maven.VersionResolverFactory;
 import org.wildfly.prospero.Messages;
 import org.wildfly.prospero.api.exceptions.MetadataException;
 import org.wildfly.prospero.api.exceptions.NoChannelException;
@@ -48,85 +56,90 @@ import org.wildfly.prospero.model.ProsperoConfig;
 
 public class ProvisioningDefinition {
 
-    public static final RepositoryPolicy DEFAULT_REPOSITORY_POLICY = new RepositoryPolicy(true, RepositoryPolicy.UPDATE_POLICY_ALWAYS, RepositoryPolicy.CHECKSUM_POLICY_FAIL);
-
+    /**
+     * Galleon feature pack location. Can be either a well-known name (like "eap-8.0" or "wildfly") that references a predefined
+     * combination of Galleon configuration and channels, a feature pack G:A(:V), or a standard Galleon feature pack location
+     * string (see https://docs.wildfly.org/galleon/#_feature_pack_location).
+     */
     private final String fpl;
+
+    /**
+     * This field would only contain channels parsed from the prosper-known-combinations.yaml file ("well-known feature packs"),
+     * or a synthetic channel created when a manifest coordinate is given (via {@link Builder#setManifest(String)}).
+     *
+     * When channels are provided via {@link Builder#setChannelCoordinates(String)}, the channels would come in a form of
+     * ChannelCoordinate(s).
+     */
     private List<Channel> channels = new ArrayList<>();
+
+    /**
+     * Coordinates of channels to use for artifact resolution. Coordinate can be either GA(V) or URL.
+     */
+    private final List<ChannelCoordinate> channelCoordinates = new ArrayList<>();
+
+    /**
+     * List of Galleon packages to include (see https://docs.wildfly.org/galleon/#_feature_pack_archive_structure).
+     */
     private final Set<String> includedPackages = new HashSet<>();
-    private final List<RemoteRepository> repositories = new ArrayList<>();
+
+    /**
+     * Maven repositories to download artifacts from. If set, this list is going to override default repositories defined in the
+     * channels.
+     */
+    private final List<Repository> overrideRepositories = new ArrayList<>();
+
+    /**
+     * Galleon provisioning.xml file URI. Alternative to {@link #fpl}. Galleon provisioning.xml file can be used to provide
+     * detailed provisioning configuration.
+     */
     private final URI definition;
 
-    private ProvisioningDefinition(Builder builder) throws MetadataException, NoChannelException {
-        final Optional<String> fpl = Optional.ofNullable(builder.fpl);
-        final Optional<URI> definition = Optional.ofNullable(builder.definitionFile);
-        final List<Repository> overrideRepos = builder.overrideRepositories;
-        final Optional<Path> provisionConfigFile = Optional.ofNullable(builder.provisionConfigFile);
-        final Optional<ChannelManifestCoordinate> manifest = Optional.ofNullable(builder.manifest);
-        final Optional<Set<String>> includedPackages = Optional.ofNullable(builder.includedPackages);
+    private ProvisioningDefinition(Builder builder) throws NoChannelException {
+        this.includedPackages.addAll(builder.includedPackages);
+        this.overrideRepositories.addAll(builder.overrideRepositories);
+        this.channelCoordinates.addAll(builder.channelCoordinates);
 
-        this.includedPackages.addAll(includedPackages.orElse(Collections.emptySet()));
-
-        if (fpl.isPresent() && KnownFeaturePacks.isWellKnownName(fpl.get())) {
-            KnownFeaturePack featurePackInfo = KnownFeaturePacks.getByName(fpl.get());
+        if (builder.fpl.isPresent() && KnownFeaturePacks.isWellKnownName(builder.fpl.get())) { // if known FP name
+            KnownFeaturePack featurePackInfo = KnownFeaturePacks.getByName(builder.fpl.get());
             this.fpl = null;
             this.definition = featurePackInfo.getGalleonConfiguration();
-            this.repositories.addAll(featurePackInfo.getRemoteRepositories());
-            setUpBuildEnv(overrideRepos, provisionConfigFile, manifest, featurePackInfo.getChannels());
-        } else if (provisionConfigFile.isPresent()) {
-            this.fpl = fpl.orElse(null);
-            this.definition = definition.orElse(null);
-            this.channels = ProsperoConfig.readConfig(provisionConfigFile.get()).getChannels();
-            this.repositories.clear();
-            this.repositories.addAll(Collections.emptyList());
+            if (this.channelCoordinates.isEmpty()) { // no channels provided by user
+                if (builder.manifest.isPresent()) { // if manifest given, use it to create a channel
+                    List<Repository> repositories = extractRepositoriesFromChannels(featurePackInfo.getChannels());
+                    this.channels = List.of(composeChannelFromManifest(builder.manifest.get(), repositories));
+                } else if (!featurePackInfo.getChannels().isEmpty()) { // if no manifest given, use channels from known FP
+                    this.channels = featurePackInfo.getChannels();
+                } else {
+                    throw Messages.MESSAGES.fplDefinitionDoesntContainChannel(builder.fpl.get());
+                }
+            }
         } else {
-            // TODO: provisionConfigFile needn't be mandatory, we could still collect all required data from the
-            //  other options (channel, channelRepo - perhaps both should be made collections)
-            throw Messages.MESSAGES.incompleteProvisioningConfiguration(String.join(", ", KnownFeaturePacks.getNames()));
-        }
-
-        if (channels.isEmpty() || channelsMissingManifest()) {
-            if (fpl.isPresent() && KnownFeaturePacks.isWellKnownName(fpl.get())) {
-                throw Messages.MESSAGES.fplDefinitionDoesntContainChannel(fpl.get());
-            } else {
-                throw Messages.MESSAGES.noChannelReference();
+            this.fpl = builder.fpl.orElse(null);
+            this.definition = builder.definitionFile.orElse(null);
+            if (this.channelCoordinates.isEmpty() && builder.manifest.isEmpty()) {
+                throw Messages.MESSAGES.predefinedFplOrChannelRequired(String.join(", ", KnownFeaturePacks.getNames()));
+            } else if (builder.manifest.isPresent()) { // if manifest given, use it to create a channel
+                if (overrideRepositories.isEmpty()) {
+                    throw Messages.MESSAGES.repositoriesMustBeSetWithManifest();
+                }
+                this.channels = List.of(composeChannelFromManifest(builder.manifest.get(), overrideRepositories));
             }
         }
     }
 
-    private boolean channelsMissingManifest() {
-        return channels.stream().anyMatch(c->c.getManifestRef() == null);
-    }
-
-    private void setUpBuildEnv(List<Repository> additionalRepositories, Optional<Path> provisionConfigFile,
-                               Optional<ChannelManifestCoordinate> manifestRef, List<Channel> channels) throws MetadataException {
-        if (!provisionConfigFile.isPresent() && !manifestRef.isPresent()) {
-            if (!additionalRepositories.isEmpty()) {
-                this.channels = TemporaryRepositoriesHandler.addRepositories(channels, additionalRepositories);
-            } else {
-                this.channels = channels;
-            }
-        } else if (manifestRef.isPresent()) {
-            final Channel channel = new Channel("", "", null, null,
-                    new ArrayList<>(channels.stream().flatMap(c -> c.getRepositories().stream()).collect(Collectors.toSet())), manifestRef.get());
-
-            this.channels = TemporaryRepositoriesHandler.addRepositories(List.of(channel), additionalRepositories);
+    private List<RemoteRepository> channelResolutionRepositories() {
+        if (overrideRepositories.isEmpty()) {
+            return List.of(new RemoteRepository.Builder("MRRC", null, "https://maven.repository.redhat.com/ga/").build(),
+                    new RemoteRepository.Builder("central", null, "https://repo1.maven.org/maven2").build());
         } else {
-            this.channels = ProsperoConfig.readConfig(provisionConfigFile.get()).getChannels();
-            this.repositories.clear();
-            this.repositories.addAll(Collections.emptyList());
+            return overrideRepositories.stream()
+                    .map(RepositoryUtils::toRemoteRepository)
+                    .collect(Collectors.toList());
         }
-    }
-
-    public static Builder builder() {
-        return new Builder();
     }
 
     public String getFpl() {
         return fpl;
-    }
-
-    public List<Channel> getChannels() {
-        return channels;
     }
 
     public URI getDefinition() {
@@ -153,30 +166,99 @@ public class ProvisioningDefinition {
                 throw Messages.MESSAGES.unableToParseConfigurationUri(definition, e);
             }
         } else {
-            throw Messages.MESSAGES.incompleteProvisioningConfiguration(String.join(", ", KnownFeaturePacks.getNames()));
+            throw Messages.MESSAGES.fplNorGalleonConfigWereSet();
         }
     }
 
+    /**
+     * Resolves channel coordinates into Channel instances.
+     *
+     * @param versionResolverFactory a VersionResolverFactory instance to perform the channel resolution
+     * @return Channel instances
+     */
+    public List<Channel> resolveChannels(VersionResolverFactory versionResolverFactory) throws NoChannelException {
+        try {
+            List<Channel> channels = new ArrayList<>(this.channels);
+
+            final List<ChannelCoordinate> urlCoordinates = channelCoordinates.stream().filter(c -> c.getUrl() != null)
+                    .collect(Collectors.toList());
+            final List<ChannelCoordinate> gavCoordinates = channelCoordinates.stream().filter(c -> c.getUrl() == null)
+                    .collect(Collectors.toList());
+
+            if (!gavCoordinates.isEmpty()) {
+                channels.addAll(versionResolverFactory.resolveChannels(gavCoordinates, channelResolutionRepositories()));
+            }
+            if (!urlCoordinates.isEmpty()) {
+                // The URL-based coordinates are resolved in a way that bypasses the VersionResolverFactory, because the factory
+                // only reads the first Channel from each document. We expect a document can contain multiple channels.
+                channels.addAll(resolveUrlCoordinates(urlCoordinates));
+            }
+
+            channels = TemporaryRepositoriesHandler.overrideRepositories(channels, overrideRepositories);
+
+            validateResolvedChannels(channels);
+            return channels;
+        } catch (MalformedURLException e) {
+            // I believe the MalformedURLException is declared mistakenly by VersionResolverFactory#resolveChannels().
+            throw new IllegalArgumentException(e);
+        }
+    }
+
+    private static List<Channel> resolveUrlCoordinates(List<ChannelCoordinate> urlCoordinates) {
+        ArrayList<Channel> channels = new ArrayList<>();
+        for (ChannelCoordinate coord: urlCoordinates) {
+            Objects.requireNonNull(coord.getUrl(), "This method only expects URL coordinates.");
+            try {
+                InputStream is = coord.getUrl().openStream();
+                String yaml = IOUtils.toString(is, StandardCharsets.UTF_8);
+                channels.addAll(ChannelMapper.fromString(yaml));
+            } catch (IOException e) {
+                InvalidChannelException ice = new InvalidChannelException(
+                        "Failed to read channel " + coord.getUrl(), List.of(e.getLocalizedMessage()));
+                ice.initCause(e);
+                throw ice;
+            }
+        }
+        return channels;
+    }
+
+    private static void validateResolvedChannels(List<Channel> channels) throws NoChannelException {
+        if (channels.isEmpty()) {
+            throw Messages.MESSAGES.noChannelReference();
+        }
+
+        Optional<Channel> invalidChannel = channels.stream().filter(c -> c.getManifestRef() == null).findFirst();
+        if (invalidChannel.isPresent()) {
+            throw Messages.MESSAGES.noChannelManifestReference(invalidChannel.get().getName());
+        }
+    }
+
+    private static List<Repository> extractRepositoriesFromChannels(List<Channel> channels) {
+        return channels.stream().flatMap(c -> c.getRepositories().stream()).collect(Collectors.toList());
+    }
+
+    private static Channel composeChannelFromManifest(ChannelManifestCoordinate manifestCoordinate, List<Repository> repositories) {
+        return new Channel("", "", null, null, repositories, manifestCoordinate);
+    }
+
+    public static Builder builder() {
+        return new Builder();
+    }
+
     public static class Builder {
-        private String fpl;
-        private Path provisionConfigFile;
-        private URI definitionFile;
+        private Optional<String> fpl = Optional.empty();
+        private Optional<URI> definitionFile = Optional.empty();
         private List<Repository> overrideRepositories = Collections.emptyList();
-        private Set<String> includedPackages;
-        private ChannelManifestCoordinate manifest;
+        private Set<String> includedPackages = Collections.emptySet();
+        private Optional<ChannelManifestCoordinate> manifest = Optional.empty();
+        private List<ChannelCoordinate> channelCoordinates = Collections.emptyList();
 
         public ProvisioningDefinition build() throws MetadataException, NoChannelException {
             return new ProvisioningDefinition(this);
         }
 
         public Builder setFpl(String fpl) {
-
-            this.fpl = fpl;
-            return this;
-        }
-
-        public Builder setProvisionConfig(Path provisionConfigFile) {
-            this.provisionConfigFile = provisionConfigFile;
+            this.fpl = Optional.ofNullable(fpl);
             return this;
         }
 
@@ -192,13 +274,26 @@ public class ProvisioningDefinition {
 
         public Builder setManifest(String manifest) {
             if (manifest != null) {
-                this.manifest = ArtifactUtils.manifestFromString(manifest);
+                this.manifest = Optional.of(ArtifactUtils.manifestCoordFromString(manifest));
+            }
+            return this;
+        }
+
+        public Builder setChannelCoordinates(String channelCoordinate) {
+            return setChannelCoordinates(List.of(channelCoordinate));
+        }
+
+        public Builder setChannelCoordinates(List<String> channelCoordinates) {
+            Objects.requireNonNull(channelCoordinates);
+            this.channelCoordinates = new ArrayList<>();
+            for (String coord: channelCoordinates) {
+                this.channelCoordinates.add(ArtifactUtils.channelCoordFromString(coord));
             }
             return this;
         }
 
         public Builder setDefinitionFile(URI provisionDefinition) {
-            this.definitionFile = provisionDefinition;
+            this.definitionFile = Optional.ofNullable(provisionDefinition);
             return this;
         }
     }
